<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/image_CV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="100dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profile_pic_IV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/user" />

    </androidx.cardview.widget.CardView>
    

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/camera_IV"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@id/image_CV"
        app:layout_constraintEnd_toEndOf="@id/image_CV"
        android:src="@drawable/camera"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterName_TIL"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/camera_IV"

        android:background="#ffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textCapSentences"
            android:id="@+id/enterName_TIET"
            android:layout_width="match_parent"
            android:hint="@string/enterName"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gender_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterName_TIL"
        tools:ignore="RtlHardcoded" />


    <LinearLayout
        android:id="@+id/gender_LL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_TV"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="22dp"
                android:checked="false"
                android:text="@string/female"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/otherRB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="22dp"
                android:checked="false"
                android:text="@string/other"
                android:textSize="16sp" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/gender_LL"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"
        android:text="@string/saveData"
        android:layout_marginRight="60dp"
        android:id="@+id/save_BT"/>






</androidx.constraintlayout.widget.ConstraintLayout>